<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterNames"
        android:background="@color/navy"
>

    <ImageView
            android:src="@drawable/tictactoe"
            android:layout_width="220dp"
            android:layout_height="180dp"
            android:id="@+id/imageView"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_header" android:contentDescription="@string/app_name"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:id="@+id/txt_header"
            android:text="@string/app_name"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="36sp" android:fontFamily="@font/architects_daughter" android:typeface="normal"
    />
    <TextView
            android:text="@string/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/etxt_p1"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
            android:text="@string/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView2"
            android:textColor="@color/white"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/etxt_p1"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/etxt_p1" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:hint="@string/name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/etxt_p2"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/name"
    />
    <Button
            android:text="@string/start"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:textColor="@color/navy"
            android:id="@+id/btn_start" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Switch
            android:text="@string/no"
            android:layout_width="105dp"
            android:layout_height="22dp"
            android:id="@+id/switch_vsCpu" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent" android:checked="false"
            android:textColor="@color/white"

            tools:checked="false"/>
    <TextView
            android:text="@string/vsCpu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/switch_vsCpu" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>


</android.support.constraint.ConstraintLayout>