<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context=".Score">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/txt_highscore"
                  android:text="@string/highscores"
                  android:textColor="@color/white"
                  android:textSize="18dp"

                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/txt_wins"
                  android:text="@string/wins"
                  android:textColor="@color/white"
                  android:textSize="18dp"
                  android:layout_gravity="center"

                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/txt_total_time"
                  android:text="@string/time_played_score"
                  android:textColor="@color/white"
                  android:textSize="18dp"
                  android:layout_gravity="right"

                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_score"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>