<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".GameOver"
             android:background="@color/navy"
>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content" android:id="@+id/txt_winner"
                android:fontFamily="@font/architects_daughter" android:textSize="24sp"
                android:gravity="center" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/playagain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_winner" android:textSize="18sp"
                android:fontFamily="@font/architects_daughter"/>
        <Button
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:textColor="@color/navy"
                android:id="@+id/btn_yes" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintEnd_toStartOf="@+id/textView7"
        />
        <Button
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:textColor="@color/navy"
                android:id="@+id/btn_no" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/textView7"
        />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>